# type-proxies-text

./: README.md  type-proxies-text.cabal
src/Data/Proxy/Text/: Lazy.hs  Strict.hs
src/Data/Proxy/Text/Lazy/: Builder.hs
