name:                   type-proxies-text
version:                0.1.0.0
synopsis:               Concrete type proxies for text package
-- description:
homepage:               https://github.com/trskop/type-proxies-text
license:                BSD3
license-file:           LICENSE
author:                 Peter Trško
maintainer:             peter.trsko@gmail.com
copyright:              Copyright (c) 2014, 2015, Peter Trško
category:               Data
build-type:             Simple
cabal-version:          >=1.10

extra-source-files:
    ChangeLog.md
  , README.md

flag pedantic
  description:          Pass additional warning flags to GHC.
  default:              False
  manual:               True

library
  hs-source-dirs:       src
  exposed-modules:
      Data.Proxy.Text.Lazy
    , Data.Proxy.Text.Lazy.Builder
    , Data.Proxy.Text.Strict
  default-language:     Haskell2010
  other-extensions:     NoImplicitPrelude
  build-depends:        base >=4.7 && <4.8, text >=1.1 && <1.2

  ghc-options:          -Wall
  if flag(pedantic)
    ghc-options:
      -fwarn-tabs
      -fwarn-implicit-prelude
      -fwarn-missing-import-lists
--    -Werror
